@@ -21,7 +21,7 @@
 </td>
 <td valign="top">
 <div align="justify">
-<h2>Designing the language</h2>
+<h1>Designing the language</h1>
 <p>
 The language design is discussed on the jail-ust-lang discussion group. That group will take the final decisions on any of the aspects of the language and is the final authority as far as language design is concerned. To be part of those decision-makers, you just have to subscribe to the discussion group by sending mail to jail-ust-lang-subscribe (at) lists (dot) sourceforge (dot) net.
 </p>
@@ -47,6 +47,6 @@ width="210" height="62" border="0" align="right" alt=
 </tbody>
 </table>
 <div style="text-align: right; font-size: smaller;"<a href="#top">back to top</a></div>
-<div align="right">This page was last updated: $Date: 2004/01/21 17:07:04 $</div>
+<div align="right">This page was last updated: $Date: 2004/01/29 16:36:23 $</div>
 </body>
 </html>
