@@ -21,17 +21,17 @@
 </td>
 <td valign="top">
 <div align="justify">
-<h3><a name="Technical_architecture"></a>Technical
-architecture</h3>
-<p>The technical architecture of the Jail language (notions like inheritance,
+<h1><a name="Technical_architecture"></a>Technical
+architecture</h1>
+<p id="summary">
+The technical architecture of the Jail language (notions like inheritance,
 casting, the scope of symbols, etc.) is under active discussion on the 
 jail-ust-lang discussion list. The text below ("Items are not confined to the 
 context they are defined in") has been submitted to that list.<br>
 You can join the discussion by mailing to 
-jail-ust-lang-subscribe@lists.sourceforge.net or by clicking 
+jail-ust-lang-subscribe at lists dot sourceforge dot net or by clicking 
 <a href="mailto:jail-ust-lang-subscribe@lists.sourceforge.net">here</a>.
 </p>
-<hr>
 <p>The folowing texts should be seen as drafts pertaining the technical
 architecture of the language and the different components of the interpreter.
 They should <i>not</i> be seen as "canonical" texts - at least as long as
@@ -112,15 +112,15 @@ assembler.
 </ul>
 </ul>
 Hence, the files are:
-<table border="1" width="100%">
+<table class\"intext" width="100%">
 <tbody>
-<tr><td align="center">file extention</td><td align="center">description</td></tr>
-<tr><td>.jail</td><td>Jail source file</td></tr>
-<tr><td>.ji</td><td>preprocessed Jail source file</td></tr>
-<tr><td>.jS</td><td>JailVM assembler source file that needs preprocessing</td></tr>
-<tr><td>.js</td><td>JailVM assembler source file</td></tr>
-<tr><td>.jo</td><td>Justice object file</td></tr>
-<tr><td>.ja</td><td>Justice archive file</td></tr>
+<tr class="title"><td>file extention</td><td>description</td></tr>
+<tr><td class="subject">.jail</td><td>Jail source file</td></tr>
+<tr><td class="subject">.ji</td><td>preprocessed Jail source file</td></tr>
+<tr><td class="subject">.jS</td><td>JailVM assembler source file that needs preprocessing</td></tr>
+<tr><td class="subject">.js</td><td>JailVM assembler source file</td></tr>
+<tr><td class="subject">.jo</td><td>Justice object file</td></tr>
+<tr><td class="subject">.ja</td><td>Justice archive file</td></tr>
 </tbody>
 </table>
 </p>
@@ -140,6 +140,6 @@ width="210" height="62" border="0" align="right" alt=
 </tbody>
 </table>
 <div style="text-align: right; font-size: smaller;"<a href="#top">back to top</a></div>
-<div align="right">This page was last updated: $Date: 2004/01/21 17:07:04 $</div>
+<div align="right">This page was last updated: $Date: 2004/01/29 16:36:23 $</div>
 </body>
 </html>
